Boom, just made it into a PWA.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Ostatnia MG | Home</title>
-    <meta charset='utf-8'/>
-	  <link rel='stylesheet' type='text/css' href='style.css'>
-  </head>
-  <body>
-    <div class="content">
-      <h1>Coming Soon</h1>
-    </div>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>III MG | Home</title>
+  <link rel="stylesheet" type="text/css" href="/styles/index.css">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="III MG">
+  <!-- TODO add favicons here -->
+
+</head>
+<body>
+
+  <header class="header">
+    <h1 class="header_title"></h1>
+    <button id="butBurger"></button>
+  </header>
+
+  <main class="main">
+    <div class="content"></div>
+  </main>
+  <script src="scripts/app.js" async></script>
+</body>
 </html>
