--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="III MG">
-  <!-- TODO add favicons here -->
-
+  <!-- realfavicongenerator.net -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/media/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/media/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/media/icons/favicon-16x16.png">
+  <link rel="manifest" href="/media/icons/site.webmanifest">
+  <link rel="mask-icon" href="/media/icons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/media/icons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#80d6ff">
+  <meta name="msapplication-config" content="/media/icons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 
